--- a/Raylib-Tetris/Raylib-Tetris.vcxproj.filters
+++ b/Raylib-Tetris/Raylib-Tetris.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Tetrominoes.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="ScoreManagament.cpp">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -53,9 +56,30 @@
     <ClInclude Include="Tetrominoes.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
+    <ClInclude Include="ScoreManagament.h">
+      <Filter>Pliki źródłowe</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Straight.tetris">
+    <None Include="Straight.tetromino">
+      <Filter>Pliki zasobów\Default</Filter>
+    </None>
+    <None Include="Square.tetromino">
+      <Filter>Pliki zasobów\Default</Filter>
+    </None>
+    <None Include="Tee.tetromino">
+      <Filter>Pliki zasobów\Default</Filter>
+    </None>
+    <None Include="Jay.tetromino">
+      <Filter>Pliki zasobów\Default</Filter>
+    </None>
+    <None Include="El.tetromino">
+      <Filter>Pliki zasobów\Default</Filter>
+    </None>
+    <None Include="SkewS.tetromino">
+      <Filter>Pliki zasobów\Default</Filter>
+    </None>
+    <None Include="SkewZ.tetromino">
       <Filter>Pliki zasobów\Default</Filter>
     </None>
   </ItemGroup>
