--- a/Raylib-Tetris/Raylib-Tetris.vcxproj
+++ b/Raylib-Tetris/Raylib-Tetris.vcxproj
@@ -177,6 +177,7 @@
     <None Include="Straight.tetromino" />
     <None Include="Tee.tetromino" />
     <None Include="test.board" />
+    <None Include="Tspin.board" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
