--- a/Raylib-Tetris/Raylib-Tetris.vcxproj.filters
+++ b/Raylib-Tetris/Raylib-Tetris.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="Pliki zasobów\sounds">
       <UniqueIdentifier>{03921d90-be37-4e20-ab40-1cfb9ca7ae1e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Pliki zasobów\PlayerData">
+      <UniqueIdentifier>{1e269dd4-4cbc-420d-b808-ee2941b54c1b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -49,6 +52,9 @@
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
     <ClCompile Include="SoundManager.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+    <ClCompile Include="MainMenu.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
@@ -78,6 +84,9 @@
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
     <ClInclude Include="SoundManager.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
+    <ClInclude Include="MainMenu.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
@@ -118,12 +127,18 @@
     <None Include="Tspin.board">
       <Filter>Pliki zasobów\presets\board</Filter>
     </None>
+    <None Include="Default.HS">
+      <Filter>Pliki zasobów\PlayerData</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Media Include="..\..\..\..\Documents\Gry\place.wav">
       <Filter>Pliki zasobów\sounds</Filter>
     </Media>
     <Media Include="music_1.mp3">
+      <Filter>Pliki zasobów\sounds</Filter>
+    </Media>
+    <Media Include="music_2.mp3">
       <Filter>Pliki zasobów\sounds</Filter>
     </Media>
   </ItemGroup>
