--- a/Raylib-Tetris/Raylib-Tetris.vcxproj
+++ b/Raylib-Tetris/Raylib-Tetris.vcxproj
@@ -191,10 +191,10 @@
     <None Include="Tspin.board" />
   </ItemGroup>
   <ItemGroup>
-    <Media Include="..\..\..\..\Documents\Gry\placeSound.wav" />
     <Media Include="menuSound.wav" />
     <Media Include="music_1.mp3" />
     <Media Include="music_2.mp3" />
+    <Media Include="placeSound.wav" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Cogwheel.png" />
