--- a/shitris/Raylib-Tetris.vcxproj
+++ b/shitris/Raylib-Tetris.vcxproj
@@ -202,6 +202,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="Cogwheel.png" />
+    <Image Include="quitTexture.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
