--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,5 @@ FodyWeavers.xsd
 /Raylib-Tetris/test.HS
 /Raylib-Tetris/Default.HS
 /Raylib-Tetris/defaultcontrols.setting
+/shitris/Default.HS
+/shitris/test.HS
